change file names

--- a/organizer.html
+++ b/organizer.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="stylesheet" href="test.css">
+        <link rel="stylesheet" href="organizer.css">
     </head>
     <body>
         <div class="container">
