change title name

--- a/organizer.html
+++ b/organizer.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <!-- Page Title -->
-        <div id="title"><p>Connect</p></div>
+        <div id="title"><p>Study Connect</p></div>
         <!-- Links/Apps -->
         <div id="link-container">
             <div id="add-link-container">
